2013-02-24  Moritz Bunkus  <moritz@bunkus.org>

        * mmg: new feature: When a playlist file (e.g. MPLS Blu-ray
        playlist) is added mmg can optionally scan all the other files in
        the directory that have the same extension and present the user
        with the results (including them playback time, total size, number
        of chapters, number and types of tracks). The user can then select
        the actual playlist file to add. The user can configure the
        minimum playlist duration in order to filter out too short ones.

2013-02-22  Moritz Bunkus  <moritz@bunkus.org>

        * mmg: new feature: Added an option for disabling making the
        suggested output file name unique by adding a running number
        (e.g. ' (1)'). Implements #848.

        * mmg: new feature: The output file name can be auto-set to be
        located in the first input file's parent directory. Implements
        #849.

2013-02-17  Moritz Bunkus  <moritz@bunkus.org>

        * mkvinfo, mkvpropedit, mmg's header editor: bug fix: Fixed the
        description for the DisplayUnit element to include value 3
        ("aspect ratio").

2013-02-16  Moritz Bunkus  <moritz@bunkus.org>

        * documentation: Added a Dutch translation of mmg's guide by
        René Maassen (see AUTHORS).

        * mkvmerge: bug fix: Fixed handling chapters when splitting by
        parts (both parts/timecodes and parts/frames). Fixes #831.

        * mkvmerge: bug fix: Fixed reading certain MP4 atoms with invalid
        length fields.

2013-02-06  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge: bug fix in common AAC code: Fixed wrong calculation of
        AAC packet size for malformed packets resulting in "safemalloc()"
        failing to allocate memory. Part of a fix for #832.

2013-02-03  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge: new feature: Implemented support for reading MPLS
        BluRay playlist files. All M2TS files referenced from an MPLS file