@@ -234,3 +234,4 @@ T_385split_parts_frames:14add8af7d016c048f0828708af04a86+c787a3d20fe2c26f7e0e031
 T_386flv_vp6f:a0ab8eb0dedf2c8c472e818794c2ad64:passed:20130121-223417:0.187881106
 T_387mp4_free_invalid_size:f3deb6abb3f60c0de606e166353a71b1:passed:20130216-003333:0.04107827
 T_388split_parts_and_chapters:e1bc3ec155ec33bca8eec967aceab25a-389c3bd6f8eca14fea4ef663a59b2e83-04fa29b52eb8d4962edf4f010548b375:passed:20130216-203522:0.690018077
+T_389mpeg1_in_ps_misdetected_as_avc:31ba2275cda1531973423ad509013fdb:passed:20130224-132738:1.205560654
